[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Objects/Blocks (16 x 16).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Cover.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Cover" type="Sprite"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 48, 16, 16, 16 )
script = ExtResource( 2 )

[node name="CoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoverArea"]
shape = SubResource( 1 )

[node name="CoverPositionLeft" type="Position2D" parent="."]
position = Vector2( -16, 8 )

[node name="CoverPositionRight" type="Position2D" parent="."]
position = Vector2( 16, 8 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )
disabled = true

[connection signal="body_entered" from="CoverArea" to="." method="_on_CoverArea_body_entered"]
[connection signal="body_exited" from="CoverArea" to="." method="_on_CoverArea_body_exited"]
